SERVER-49943 [SBE] Fix edge case bug with 'find({a.b.c: ..})'